crates/server/tests/snapshots/replay__auth_login.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "access_token": "[access_token]",
    "refresh_token": "[refresh_token]"
  },
  "status": 200
}
