crates/server/tests/snapshots/replay__delete_movie_still_holding_versions.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "not_empty",
      "message": "the movie still has versions"
    }
  },
  "status": 409
}
