crates/server/tests/snapshots/replay__delete_season_still_holding_episodes.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "not_empty",
      "message": "the season still has episodes"
    }
  },
  "status": 409
}
