crates/server/tests/snapshots/replay__delete_series_still_holding_seasons.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "not_empty",
      "message": "the series still has seasons"
    }
  },
  "status": 409
}
