crates/server/tests/snapshots/replay__episode_edit_bad_air_date.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "bad_request",
      "message": "unparseable air_date: last thursday"
    }
  },
  "status": 400
}
