crates/server/tests/snapshots/replay__err_internal.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "internal",
      "message": "internal server error"
    }
  },
  "status": 500
}
