crates/server/tests/snapshots/replay__genres.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": [
    {
      "id": "g-action",
      "name": "Action"
    },
    {
      "id": "g-drama",
      "name": "Drama"
    }
  ],
  "status": 200
}
