crates/server/tests/snapshots/replay__genres_bad_kind.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "bad_request",
      "message": "unknown kind: episode"
    }
  },
  "status": 400
}
