crates/server/tests/snapshots/replay__genres_series.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": [
    {
      "id": "g-action",
      "name": "Action"
    }
  ],
  "status": 200
}
