crates/server/tests/snapshots/replay__libraries_create.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "created_at": "[created_at]",
    "id": "[id]",
    "kind": "movie",
    "metadata_sources": [
      "tmdb"
    ],
    "name": "New Library",
    "origin": "local",
    "roots": [
      "/media/new"
    ],
    "scan_schedule": null,
    "updated_at": "[updated_at]",
    "watcher": "manual"
  },
  "status": 201
}
